// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeEditor: index mapStateToProps with default values 1`] = `
Object {
  "chainIds": Array [],
  "codeEditorData": Object {
    "codeCompileSuccess": false,
    "contractName": "Cloner",
    "createDisabled": true,
    "currentTabSelected": 0,
    "enableCreateAction": false,
    "error": "src:6:77: Error: Expected token Semicolon got 'RBrace'
{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }
                                                                            ^
",
    "fileName": "SampleStorage",
    "isRemoveTab": false,
    "lastTabSelected": 0,
    "localCompileException": "",
    "response": "src:6:77: Error: Expected token Semicolon got 'RBrace'↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵                                                                            ^↵",
    "serverText": "HelloFri Nov 17 2017 15:51:33 GMT+0530 (IST)",
    "sourceCode": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
    "tab": Array [
      Object {
        "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
        "title": "abc.sol",
      },
      Object {
        "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
        "title": "xyz.sol",
      },
    ],
    "timer": 87,
  },
  "selectedChain": "abcdefg",
  "selectedTabContent": Object {
    "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
    "title": "abc.sol",
  },
}
`;

exports[`CodeEditor: index render codeEditor with default values 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ReduxForm
    codeEditorData={
      Object {
        "codeCompileSuccess": false,
        "contractName": "Cloner",
        "createDisabled": true,
        "currentTabSelected": 0,
        "enableCreateAction": false,
        "error": "src:6:77: Error: Expected token Semicolon got 'RBrace'
{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }
                                                                            ^
",
        "fileName": "SampleStorage",
        "isRemoveTab": false,
        "lastTabSelected": 0,
        "localCompileException": "",
        "response": "src:6:77: Error: Expected token Semicolon got 'RBrace'↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵                                                                            ^↵",
        "serverText": "HelloFri Nov 17 2017 15:51:33 GMT+0530 (IST)",
        "sourceCode": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
        "tab": Array [
          Object {
            "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
            "title": "abc.sol",
          },
          Object {
            "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
            "title": "xyz.sol",
          },
        ],
        "timer": 87,
      }
    }
    selectedTabContent={
      Object {
        "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
        "title": "abc.sol",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "codeEditorData": Object {
        "codeCompileSuccess": false,
        "contractName": "Cloner",
        "createDisabled": true,
        "currentTabSelected": 0,
        "enableCreateAction": false,
        "error": "src:6:77: Error: Expected token Semicolon got 'RBrace'
{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }
                                                                            ^
",
        "fileName": "SampleStorage",
        "isRemoveTab": false,
        "lastTabSelected": 0,
        "localCompileException": "",
        "response": "src:6:77: Error: Expected token Semicolon got 'RBrace'↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵                                                                            ^↵",
        "serverText": "HelloFri Nov 17 2017 15:51:33 GMT+0530 (IST)",
        "sourceCode": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
        "tab": Array [
          Object {
            "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
            "title": "abc.sol",
          },
          Object {
            "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
            "title": "xyz.sol",
          },
        ],
        "timer": 87,
      },
      "destroyOnUnmount": true,
      "enableReinitialize": false,
      "forceUnregisterOnUnmount": false,
      "form": "CodeEditor",
      "getFormState": [Function],
      "initialValues": undefined,
      "keepDirtyOnReinitialize": false,
      "persistentSubmitErrors": false,
      "pure": true,
      "selectedTabContent": Object {
        "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
        "title": "abc.sol",
      },
      "shouldAsyncValidate": [Function],
      "shouldValidate": [Function],
      "touchOnBlur": true,
      "touchOnChange": false,
    },
    "ref": "wrapped",
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "codeEditorData": Object {
          "codeCompileSuccess": false,
          "contractName": "Cloner",
          "createDisabled": true,
          "currentTabSelected": 0,
          "enableCreateAction": false,
          "error": "src:6:77: Error: Expected token Semicolon got 'RBrace'
{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }
                                                                            ^
",
          "fileName": "SampleStorage",
          "isRemoveTab": false,
          "lastTabSelected": 0,
          "localCompileException": "",
          "response": "src:6:77: Error: Expected token Semicolon got 'RBrace'↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵                                                                            ^↵",
          "serverText": "HelloFri Nov 17 2017 15:51:33 GMT+0530 (IST)",
          "sourceCode": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
          "tab": Array [
            Object {
              "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
              "title": "abc.sol",
            },
            Object {
              "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
              "title": "xyz.sol",
            },
          ],
          "timer": 87,
        },
        "destroyOnUnmount": true,
        "enableReinitialize": false,
        "forceUnregisterOnUnmount": false,
        "form": "CodeEditor",
        "getFormState": [Function],
        "initialValues": undefined,
        "keepDirtyOnReinitialize": false,
        "persistentSubmitErrors": false,
        "pure": true,
        "selectedTabContent": Object {
          "text": "contract Cloner {↵Sheep[] public clones;↵string public sheepDNA = \\"ccc\\";↵↵function cloneSheep(string name) returns (address)↵{ Sheep sheep = new Sheep(name, sheepDNA); clones.push(sheep); return sheep }↵↵}↵↵contract Sheep {↵string public name;↵string public dna;↵↵function Sheep(string _name, string _dna)↵{ name = _name; dna = _dna; }↵↵function geneticallyModify(string _dna)↵{ dna = _dna; }↵↵}",
          "title": "abc.sol",
        },
        "shouldAsyncValidate": [Function],
        "shouldValidate": [Function],
        "touchOnBlur": true,
        "touchOnChange": false,
      },
      "ref": "wrapped",
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactFifteenAdapter {
      "options": Object {
        "supportPrevContextArgumentOfComponentDidUpdate": true,
      },
    },
  },
}
`;
